--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.chartaxis.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.chartaxis.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartAxis#axisGroup:member'
@@ -55,7 +55,7 @@ items:
       - 'excel!Excel.ChartAxis#width:member'
   - uid: 'excel!Excel.ChartAxis#axisGroup:member'
     summary: |-
-      返回或设置指定轴的组。 有关详细信息，请参阅 ChartAxisGroup。 只读。
+      为指定坐标轴指定组。 有关详细信息，请参阅 ChartAxisGroup。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: axisGroup
@@ -70,7 +70,7 @@ items:
           - 'excel!Excel.ChartAxis#axisGroup~0:complex'
   - uid: 'excel!Excel.ChartAxis#baseTimeUnit:member'
     summary: |-
-      返回或设置指定分类轴的基本单位。
+      指定指定分类轴的基本单位。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: baseTimeUnit
@@ -85,7 +85,7 @@ items:
           - 'excel!Excel.ChartAxis#baseTimeUnit~0:complex'
   - uid: 'excel!Excel.ChartAxis#categoryType:member'
     summary: |-
-      返回或设置分类轴类型。
+      指定分类轴类型。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: categoryType
@@ -112,7 +112,7 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ChartAxis#customDisplayUnit:member'
     summary: |-
-      标识自定义轴显示单位值。 只读。 要设置此属性，请使用 SetCustomDisplayUnit(double) 方法。
+      指定自定义轴显示单位值。 要设置此属性，请使用 SetCustomDisplayUnit(double) 方法。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: customDisplayUnit
@@ -164,7 +164,7 @@ items:
           ```
   - uid: 'excel!Excel.ChartAxis#format:member'
     summary: |-
-      表示 chart 对象的格式，包括线条和字体格式。 只读。
+      表示 chart 对象的格式，包括线条和字体格式。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
@@ -179,7 +179,7 @@ items:
           - 'excel!Excel.ChartAxisFormat:class'
   - uid: 'excel!Excel.ChartAxis#height:member'
     summary: |-
-      表示图表轴的高度，以磅为单位。 如果轴不可见，则为 Null。 只读。
+      指定图表坐标轴的高度（以磅为单位）。 如果轴不可见，则为 Null。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
@@ -194,7 +194,7 @@ items:
           - number
   - uid: 'excel!Excel.ChartAxis#left:member'
     summary: |-
-      表示轴的左边缘到图表区域左侧的距离，以磅为单位。 如果轴不可见，则为 Null。 只读。
+      指定从坐标轴的左边缘到图表区左侧的距离（以磅为单位）。 如果轴不可见，则为 Null。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
@@ -291,7 +291,7 @@ items:
                       }
   - uid: 'excel!Excel.ChartAxis#logBase:member'
     summary: |-
-      表示使用对数刻度时对数的底数。
+      指定使用对数刻度时的对数的底数。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: logBase
@@ -306,7 +306,7 @@ items:
           - number
   - uid: 'excel!Excel.ChartAxis#majorGridlines:member'
     summary: |-
-      返回一个表示指定坐标轴的主要网格线的网格线对象。 只读。
+      返回一个表示指定坐标轴的主要网格线的网格线对象。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: majorGridlines
@@ -321,7 +321,7 @@ items:
           - 'excel!Excel.ChartGridlines:class'
   - uid: 'excel!Excel.ChartAxis#majorTickMark:member'
     summary: |-
-      表示特定轴的主要刻度线类型。 有关详细信息，请参阅 ChartAxisTickMark。
+      指定坐标轴的主要刻度线的类型。 有关详细信息，请参阅 ChartAxisTickMark。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: majorTickMark
@@ -336,7 +336,7 @@ items:
           - 'excel!Excel.ChartAxis#majorTickMark~0:complex'
   - uid: 'excel!Excel.ChartAxis#majorTimeUnitScale:member'
     summary: |-
-      返回或设置当 CategoryType 属性设为 TimeScale 时分类轴的主要单位刻度值。
+      当 CategoryType 属性设置为 "时间刻度" 时，指定分类轴的主要刻度单位刻度值。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: majorTimeUnitScale
@@ -396,7 +396,7 @@ items:
           - any
   - uid: 'excel!Excel.ChartAxis#minorGridlines:member'
     summary: |-
-      返回一个表示指定坐标轴的次要网格线的网格线对象。 只读。
+      返回一个表示指定坐标轴的次要网格线的网格线对象。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: minorGridlines
@@ -411,7 +411,7 @@ items:
           - 'excel!Excel.ChartGridlines:class'
   - uid: 'excel!Excel.ChartAxis#minorTickMark:member'
     summary: |-
-      表示指定轴的次要刻度线类型。 有关详细信息，请参阅 ChartAxisTickMark。
+      指定指定坐标轴的次要刻度线类型。 有关详细信息，请参阅 ChartAxisTickMark。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: minorTickMark
@@ -426,7 +426,7 @@ items:
           - 'excel!Excel.ChartAxis#minorTickMark~0:complex'
   - uid: 'excel!Excel.ChartAxis#minorTimeUnitScale:member'
     summary: |-
-      返回或设置当 CategoryType 属性设为 TimeScale 时分类轴的次要单位刻度值。
+      当 CategoryType 属性设置为 "时间刻度" 时，指定分类轴的次要刻度单位刻度值。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: minorTimeUnitScale
@@ -456,7 +456,7 @@ items:
           - any
   - uid: 'excel!Excel.ChartAxis#reversePlotOrder:member'
     summary: |-
-      表示 Microsoft Excel 是否按照最后一个到第一个的顺序绘制数据点。
+      指定 Excel 是否将数据点绘制为从最后一个到第一个。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: reversePlotOrder
@@ -471,7 +471,7 @@ items:
           - boolean
   - uid: 'excel!Excel.ChartAxis#scaleType:member'
     summary: |-
-      表示数值轴刻度类型。 有关详细信息，请参阅 ChartAxisScaleType。
+      指定数值轴的刻度类型。 有关详细信息，请参阅 ChartAxisScaleType。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: scaleType
@@ -509,7 +509,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartAxis#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -572,7 +572,7 @@ items:
             - number
   - uid: 'excel!Excel.ChartAxis#showDisplayUnitLabel:member'
     summary: |-
-      表示轴显示单位标签是否可见。
+      指定轴显示单位标签是否可见。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showDisplayUnitLabel
@@ -605,7 +605,7 @@ items:
           ```
   - uid: 'excel!Excel.ChartAxis#tickLabelPosition:member'
     summary: |-
-      表示特定轴上的刻度线标签位置。 有关详细信息，请参阅 ChartAxisTickLabelPosition。
+      在指定坐标轴上指定刻度线标签的位置。 有关详细信息，请参阅 ChartAxisTickLabelPosition。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tickLabelPosition
@@ -620,7 +620,7 @@ items:
           - 'excel!Excel.ChartAxis#tickLabelPosition~0:complex'
   - uid: 'excel!Excel.ChartAxis#tickLabelSpacing:member'
     summary: |-
-      表示刻度线标签之间的分类或系列数。 可以是 1 到 31999 的值或空字符串（自动设置）。 返回的值始终为数字。
+      指定分类或系列轴刻度线标签之间的数目。 可以是 1 到 31999 的值或空字符串（自动设置）。 返回的值始终为数字。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tickLabelSpacing
@@ -635,7 +635,7 @@ items:
           - any
   - uid: 'excel!Excel.ChartAxis#tickMarkSpacing:member'
     summary: |-
-      表示刻度线之间的分类或系列数。
+      指定分类或刻度线之间的系列数。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tickMarkSpacing
@@ -650,7 +650,7 @@ items:
           - number
   - uid: 'excel!Excel.ChartAxis#title:member'
     summary: |-
-      表示坐标轴标题。 只读。
+      表示坐标轴标题。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: title
@@ -678,7 +678,7 @@ items:
         description: ''
   - uid: 'excel!Excel.ChartAxis#top:member'
     summary: |-
-      表示轴的上边缘到图表区域顶部的距离，以磅为单位。 如果轴不可见，则为 Null。 只读。
+      指定从轴的上边缘到图表区域顶部的距离（以磅为单位）。 如果轴不可见，则为 Null。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
@@ -693,7 +693,7 @@ items:
           - number
   - uid: 'excel!Excel.ChartAxis#type:member'
     summary: |-
-      表示轴类型。 有关详细信息，请参阅 ChartAxisType。
+      指定坐标轴类型。 有关详细信息，请参阅 ChartAxisType。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
@@ -708,7 +708,7 @@ items:
           - 'excel!Excel.ChartAxis#type~0:complex'
   - uid: 'excel!Excel.ChartAxis#visible:member'
     summary: |-
-      该布尔值表示轴的可见性。
+      指定轴是否可见。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
@@ -723,7 +723,7 @@ items:
           - boolean
   - uid: 'excel!Excel.ChartAxis#width:member'
     summary: |-
-      表示图表轴的宽度，以磅为单位。 如果轴不可见，则为 Null。 只读。
+      指定图表坐标轴的宽度（以磅为单位）。 如果轴不可见，则为 Null。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
@@ -737,7 +737,7 @@ items:
         type:
           - number
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.ChartAxis#axisGroup~0:complex'
     name: Excel.ChartAxisGroup | "Primary" | "Secondary"
@@ -832,7 +832,7 @@ references:
         fullName: ' | "Linear" | "Logarithmic"'
   - uid: 'excel!Excel.Interfaces.ChartAxisUpdateData:interface'
     name: Interfaces.ChartAxisUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Range:class'
     name: Range
