--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.chartaxis.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.chartaxis.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartAxis#alignment:member'
@@ -65,7 +65,7 @@ items:
       - 'excel!Excel.ChartAxis#width:member'
   - uid: 'excel!Excel.ChartAxis#alignment:member'
     summary: |-
-      表示指定轴刻度线标签的对齐方式。 有关详细信息，请参阅 ChartTextHorizontalAlignment。
+      指定指定轴刻度线标签的对齐方式。 有关详细信息，请参阅 ChartTextHorizontalAlignment。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: alignment
@@ -80,7 +80,7 @@ items:
           - 'excel!Excel.ChartAxis#alignment~0:complex'
   - uid: 'excel!Excel.ChartAxis#axisGroup:member'
     summary: |-
-      返回或设置指定轴的组。 有关详细信息，请参阅 ChartAxisGroup。 只读。
+      为指定坐标轴指定组。 有关详细信息，请参阅 ChartAxisGroup。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: axisGroup
@@ -95,7 +95,7 @@ items:
           - 'excel!Excel.ChartAxis#axisGroup~0:complex'
   - uid: 'excel!Excel.ChartAxis#baseTimeUnit:member'
     summary: |-
-      返回或设置指定分类轴的基本单位。
+      指定指定分类轴的基本单位。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: baseTimeUnit
@@ -110,7 +110,7 @@ items:
           - 'excel!Excel.ChartAxis#baseTimeUnit~0:complex'
   - uid: 'excel!Excel.ChartAxis#categoryType:member'
     summary: |-
-      返回或设置分类轴类型。
+      指定分类轴类型。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: categoryType
@@ -137,7 +137,7 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ChartAxis#customDisplayUnit:member'
     summary: |-
-      标识自定义轴显示单位值。 只读。 要设置此属性，请使用 SetCustomDisplayUnit(double) 方法。
+      指定自定义轴显示单位值。 要设置此属性，请使用 SetCustomDisplayUnit(double) 方法。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: customDisplayUnit
@@ -189,7 +189,7 @@ items:
           ```
   - uid: 'excel!Excel.ChartAxis#format:member'
     summary: |-
-      表示 chart 对象的格式，包括线条和字体格式。 只读。
+      表示 chart 对象的格式，包括线条和字体格式。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
@@ -204,7 +204,7 @@ items:
           - 'excel!Excel.ChartAxisFormat:class'
   - uid: 'excel!Excel.ChartAxis#height:member'
     summary: |-
-      表示图表轴的高度，以磅为单位。 如果轴不可见，则为 Null。 只读。
+      指定图表坐标轴的高度（以磅为单位）。 如果轴不可见，则为 Null。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
@@ -219,7 +219,7 @@ items:
           - number
   - uid: 'excel!Excel.ChartAxis#isBetweenCategories:member'
     summary: |-
-      表示数值轴是否与分类之间的分类轴交叉。
+      指定数值轴与分类轴相交于分类之间。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: isBetweenCategories
@@ -234,7 +234,7 @@ items:
           - boolean
   - uid: 'excel!Excel.ChartAxis#left:member'
     summary: |-
-      表示轴的左边缘到图表区域左侧的距离，以磅为单位。 如果轴不可见，则为 Null。 只读。
+      指定从坐标轴的左边缘到图表区左侧的距离（以磅为单位）。 如果轴不可见，则为 Null。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
@@ -249,7 +249,7 @@ items:
           - number
   - uid: 'excel!Excel.ChartAxis#linkNumberFormat:member'
     summary: |-
-      表示数字格式是否链接到单元格。 如果为 true，则数字格式会在单元格中更改时在标签中更改。
+      指定数字格式是否链接到单元格。 如果为 true，则数字格式会在单元格中更改时在标签中更改。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: linkNumberFormat
@@ -346,7 +346,7 @@ items:
                       }
   - uid: 'excel!Excel.ChartAxis#logBase:member'
     summary: |-
-      表示使用对数刻度时对数的底数。
+      指定使用对数刻度时的对数的底数。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: logBase
@@ -361,7 +361,7 @@ items:
           - number
   - uid: 'excel!Excel.ChartAxis#majorGridlines:member'
     summary: |-
-      返回一个表示指定坐标轴的主要网格线的网格线对象。 只读。
+      返回一个表示指定坐标轴的主要网格线的网格线对象。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: majorGridlines
@@ -376,7 +376,7 @@ items:
           - 'excel!Excel.ChartGridlines:class'
   - uid: 'excel!Excel.ChartAxis#majorTickMark:member'
     summary: |-
-      表示特定轴的主要刻度线类型。 有关详细信息，请参阅 ChartAxisTickMark。
+      指定坐标轴的主要刻度线的类型。 有关详细信息，请参阅 ChartAxisTickMark。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: majorTickMark
@@ -391,7 +391,7 @@ items:
           - 'excel!Excel.ChartAxis#majorTickMark~0:complex'
   - uid: 'excel!Excel.ChartAxis#majorTimeUnitScale:member'
     summary: |-
-      返回或设置当 CategoryType 属性设为 TimeScale 时分类轴的主要单位刻度值。
+      当 CategoryType 属性设置为 "时间刻度" 时，指定分类轴的主要刻度单位刻度值。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: majorTimeUnitScale
@@ -451,7 +451,7 @@ items:
           - any
   - uid: 'excel!Excel.ChartAxis#minorGridlines:member'
     summary: |-
-      返回一个表示指定坐标轴的次要网格线的网格线对象。 只读。
+      返回一个表示指定坐标轴的次要网格线的网格线对象。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: minorGridlines
@@ -466,7 +466,7 @@ items:
           - 'excel!Excel.ChartGridlines:class'
   - uid: 'excel!Excel.ChartAxis#minorTickMark:member'
     summary: |-
-      表示指定轴的次要刻度线类型。 有关详细信息，请参阅 ChartAxisTickMark。
+      指定指定坐标轴的次要刻度线类型。 有关详细信息，请参阅 ChartAxisTickMark。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: minorTickMark
@@ -481,7 +481,7 @@ items:
           - 'excel!Excel.ChartAxis#minorTickMark~0:complex'
   - uid: 'excel!Excel.ChartAxis#minorTimeUnitScale:member'
     summary: |-
-      返回或设置当 CategoryType 属性设为 TimeScale 时分类轴的次要单位刻度值。
+      当 CategoryType 属性设置为 "时间刻度" 时，指定分类轴的次要刻度单位刻度值。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: minorTimeUnitScale
@@ -511,7 +511,7 @@ items:
           - any
   - uid: 'excel!Excel.ChartAxis#multiLevel:member'
     summary: |-
-      表示是否为多级轴。
+      指定轴是否为多级。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: multiLevel
@@ -526,7 +526,7 @@ items:
           - boolean
   - uid: 'excel!Excel.ChartAxis#numberFormat:member'
     summary: |-
-      表示轴刻度线标签的格式代码。
+      指定轴刻度线标签的格式代码。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: numberFormat
@@ -541,7 +541,7 @@ items:
           - string
   - uid: 'excel!Excel.ChartAxis#offset:member'
     summary: |-
-      表示不同标签级别之间的距离以及一级标签和轴线之间的距离。 此值应该是 0 到 1000 之间的整数。
+      指定标签级别之间的距离以及第一层和轴线之间的距离。 此值应该是 0 到 1000 之间的整数。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: offset
@@ -556,7 +556,7 @@ items:
           - number
   - uid: 'excel!Excel.ChartAxis#position:member'
     summary: |-
-      表示两轴交叉的特定轴位置。 有关详细信息，请参阅 ChartAxisPosition。
+      指定另一个轴交叉处的指定轴位置。 有关详细信息，请参阅 ChartAxisPosition。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: position
@@ -571,7 +571,7 @@ items:
           - 'excel!Excel.ChartAxis#position~0:complex'
   - uid: 'excel!Excel.ChartAxis#positionAt:member'
     summary: |-
-      表示两轴交叉的特定轴位置。 应使用 SetPositionAt(double) 方法设置此属性。
+      指定另一坐标轴交叉处的指定轴位置。 应使用 SetPositionAt(double) 方法设置此属性。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: positionAt
@@ -586,7 +586,7 @@ items:
           - number
   - uid: 'excel!Excel.ChartAxis#reversePlotOrder:member'
     summary: |-
-      表示 Microsoft Excel 是否按照最后一个到第一个的顺序绘制数据点。
+      指定 Excel 是否将数据点绘制为从最后一个到第一个。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: reversePlotOrder
@@ -601,7 +601,7 @@ items:
           - boolean
   - uid: 'excel!Excel.ChartAxis#scaleType:member'
     summary: |-
-      表示数值轴刻度类型。 有关详细信息，请参阅 ChartAxisScaleType。
+      指定数值轴的刻度类型。 有关详细信息，请参阅 ChartAxisScaleType。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: scaleType
@@ -639,7 +639,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartAxis#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -702,7 +702,7 @@ items:
             - number
   - uid: 'excel!Excel.ChartAxis#setPositionAt:member(1)'
     summary: |-
-      设置两轴交叉的特定轴位置。
+      设置另一个轴交叉处的指定轴位置。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: setPositionAt(value)
@@ -723,7 +723,7 @@ items:
             - number
   - uid: 'excel!Excel.ChartAxis#showDisplayUnitLabel:member'
     summary: |-
-      表示轴显示单位标签是否可见。
+      指定轴显示单位标签是否可见。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showDisplayUnitLabel
@@ -756,7 +756,7 @@ items:
           ```
   - uid: 'excel!Excel.ChartAxis#textOrientation:member'
     summary: |-
-      表示文本面向图表轴刻度线标签的角度。 该值应为-90 到90的整数或垂直方向的文本的整数180。
+      指定文本面向图表轴刻度线标签的角度。 该值应为-90 到90的整数或垂直方向的文本的整数180。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: textOrientation
@@ -771,7 +771,7 @@ items:
           - any
   - uid: 'excel!Excel.ChartAxis#tickLabelPosition:member'
     summary: |-
-      表示特定轴上的刻度线标签位置。 有关详细信息，请参阅 ChartAxisTickLabelPosition。
+      在指定坐标轴上指定刻度线标签的位置。 有关详细信息，请参阅 ChartAxisTickLabelPosition。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tickLabelPosition
@@ -786,7 +786,7 @@ items:
           - 'excel!Excel.ChartAxis#tickLabelPosition~0:complex'
   - uid: 'excel!Excel.ChartAxis#tickLabelSpacing:member'
     summary: |-
-      表示刻度线标签之间的分类或系列数。 可以是 1 到 31999 的值或空字符串（自动设置）。 返回的值始终为数字。
+      指定分类或系列轴刻度线标签之间的数目。 可以是 1 到 31999 的值或空字符串（自动设置）。 返回的值始终为数字。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tickLabelSpacing
@@ -801,7 +801,7 @@ items:
           - any
   - uid: 'excel!Excel.ChartAxis#tickMarkSpacing:member'
     summary: |-
-      表示刻度线之间的分类或系列数。
+      指定分类或刻度线之间的系列数。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tickMarkSpacing
@@ -816,7 +816,7 @@ items:
           - number
   - uid: 'excel!Excel.ChartAxis#title:member'
     summary: |-
-      表示坐标轴标题。 只读。
+      表示坐标轴标题。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: title
@@ -844,7 +844,7 @@ items:
         description: ''
   - uid: 'excel!Excel.ChartAxis#top:member'
     summary: |-
-      表示轴的上边缘到图表区域顶部的距离，以磅为单位。 如果轴不可见，则为 Null。 只读。
+      指定从轴的上边缘到图表区域顶部的距离（以磅为单位）。 如果轴不可见，则为 Null。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
@@ -859,7 +859,7 @@ items:
           - number
   - uid: 'excel!Excel.ChartAxis#type:member'
     summary: |-
-      表示轴类型。 有关详细信息，请参阅 ChartAxisType。
+      指定坐标轴类型。 有关详细信息，请参阅 ChartAxisType。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
@@ -874,7 +874,7 @@ items:
           - 'excel!Excel.ChartAxis#type~0:complex'
   - uid: 'excel!Excel.ChartAxis#visible:member'
     summary: |-
-      该布尔值表示轴的可见性。
+      指定轴是否可见。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
@@ -889,7 +889,7 @@ items:
           - boolean
   - uid: 'excel!Excel.ChartAxis#width:member'
     summary: |-
-      表示图表轴的宽度，以磅为单位。 如果轴不可见，则为 Null。 只读。
+      指定图表坐标轴的宽度（以磅为单位）。 如果轴不可见，则为 Null。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
@@ -903,7 +903,7 @@ items:
         type:
           - number
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.ChartAxis#alignment~0:complex'
     name: Excel.ChartTickLabelAlignment | "Center" | "Left" | "Right"
@@ -1016,7 +1016,7 @@ references:
         fullName: ' | "Linear" | "Logarithmic"'
   - uid: 'excel!Excel.Interfaces.ChartAxisUpdateData:interface'
     name: Interfaces.ChartAxisUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Range:class'
     name: Range
