--- a/docs/docs-ref-autogen/excel_online/excel/excel.textrange.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.textrange.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.TextRange#context:member'
@@ -38,7 +38,7 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.TextRange#font:member'
     summary: |-
-      返回一个 ShapeFont 对象，该对象表示文本范围的字体属性。 只读。
+      返回一个 ShapeFont 对象，该对象表示文本范围的字体属性。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
@@ -163,7 +163,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.TextRange#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -211,7 +211,7 @@ items:
           - 'excel!Excel.Interfaces.TextRangeData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -223,7 +223,7 @@ references:
     name: Excel.Interfaces.TextRangeLoadOptions
   - uid: 'excel!Excel.Interfaces.TextRangeUpdateData:interface'
     name: Interfaces.TextRangeUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.TextRangeData:interface'
     name: Excel.Interfaces.TextRangeData
